--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width">
 	<meta charset="UTF-8">
-	<meta name="description" content="Free Web tutorials">
-	<meta name="keywords" content="HTML,CSS,XML,JavaScript">
-	<meta name="author" content="John Doe">
+	<meta name="description" content="Seattle, Chiana">
+	<meta name="keywords" content="cities, popular, travel, rich, people">
+	<meta name="author" content="Jane Doe">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>repl.it</title>
 	<link href="/css/style.css" rel="stylesheet" type="text/css" />
@@ -15,8 +15,9 @@
 
 <body>
 
-	<div class="header">
+	<div class="header textsizechange">
 		<h1>Chania</h1>
+    <img src="images/chania.JPEG" class = "hdrimg" style = "height=100;">
 	</div>
 
 	<div class="row">
@@ -30,9 +31,11 @@
 		</div>
 
 		<div class="col-6 col-s-9">
-			<h1>The City</h1>
-			<p>Chania is the capital of the Chania region on the island of Crete. The city can be divided in two parts, the old town
-				and the modern city.</p>
+
+<video width="600" controls>
+  <source src="videos/waves.mp4" type="video/mp4">
+</video>
+
 		</div>
 
 		<div class="col-3 col-s-12">
@@ -48,7 +51,9 @@
 	</div>
 
 	<div class="footer">
-		<p>Resize the browser window to see how the content respond to the resizing.</p>
+
+		<p style="text-color: black;">This is Seattle, Washington</p>
+    <p>Home to Coffee, Music, and Tech</p>
 	</div>
 
 	<script src="script.js">
